[project]
name = "meatly"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-fasthtml>=0.12.4",
]


[tool.pyright]
venvPath = "."
venv = ".venv"

[dependency-groups]
lint = [
    "pre-commit>=4.1.0",
    "ruff>=0.9.10",
]
