[project]
name = "meatly"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "monsterui>=1.0.11",
    "python-fasthtml>=0.12.4",
]


[tool.pyright]
venvPath = "."
venv = ".venv"

[dependency-groups]
lint = [
    "pre-commit>=4.1.0",
    "ruff>=0.9.10",
    "watchfiles>=1.0.4",
]
